--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "exponent": "~10.0.0",
     "react": "~15.3.1",
     "react-native": "github:exponentjs/react-native#sdk-10.1.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.6.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-react": "^6.3.0"
   }
 }
