--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["react-native-stage-0/decorator-support"],
+  "presets": ["react-native-stage-0/decorator-support", "react-naitve"],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
