--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
+    "babel-preset-react-native": "^1.9.0",
     "eslint": "^3.6.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^6.3.0"
