--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
+    "color": "^0.11.3",
     "exponent": "~10.0.0",
     "react": "~15.3.1",
     "react-native": "github:exponentjs/react-native#sdk-10.1.0"
